# ttc-python-etl

./: .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: a4f3fd5f5956_initial_commit.py
src/: app.py
src/db/: build.py  model.py
src/etl/: parse_parquet.py
